=== 1.9.6 / 2010-06-17

* Support Tracker nodes in Shake scripts that come from an old (ages old!) Shake version
* Only parse channels that are actually relevant in the Flame importer

=== 1.9.5 / 2010-05-17

* More stringently check for trackers in the Shake script importer (helps from recognizing arbitrary variables as trackers)
* Increase the size of the in-mem string export buffer

=== 1.9.4 / 2010-04-16

* Fix the boujou exporter to not crash boujou 5

=== 1.9.3 / 2010-04-15

* Add direct export to boujou feature tracks
* Automatically check for new versions and alert the user that he needs an update
* Add tests for the commandline binary itself

=== 1.9.2 / 2010-04-02

* Fix a crasher when the progress bar was being set higher than 100 percent

=== 1.9.1 / 2010-03-21

* Fix a Pipeline bug introduced with the last version

=== 1.9.0 / 2010-03-21

* Use proper progress bars
* Allow proper chaining of middlewares in the commandline app - you can now apply many middlewares of the same nature in chainn, and they will be ordered correctly
* Small rewrites to Pipeline::Base (changes API slightly - please consult the docs)

=== 1.8.4 / 2010-03-10

* Fix PFTrack imports neglecting the feature name if it only contained digits

=== 1.8.3 / 2010-03-04

* Fix faulty remaining trackers report being sent from the pipeline

=== 1.8.2 / 2010-03-04

* Fix the bug in the Flame exporter that was convincing Flame that there is only one tracker in the setup
* Buffer temporary outputs to String buffers until they reach a certain size. Helps with tempfile pollution and IO speed

=== 1.8.1 / 2010-02-18

* Add Flame stabilizer export support

=== 1.7.5 / 2010-02-17

* Use a special IO so that we can display progress when parsing/reading a file (based on the IO offset)

=== 1.7.4 / 2010-02-02

* Introduce an intentional gap in the reference exports to test trackers with gaps